<resources>

    <string name="app_name">Nautical Celestial</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">com.checkmyrest.nauticalcelestial.PREFERENCES_FILE</string>
    <string name="pref_chron_err_hour">com.checkmyrest.nauticalcelestial.PREFERENCES.CHRON_ERROR_HOUR</string>
    <string name="pref_chron_err_mins">com.checkmyrest.nauticalcelestial.PREFERENCES.CHRON_ERROR_MINS</string>
    <string name="pref_chron_err_secs">com.checkmyrest.nauticalcelestial.PREFERENCES.CHRON_ERROR_SECS</string>
    <string name="pref_chron_err_dirn">com.checkmyrest.nauticalcelestial.PREFERENCES.CHRON_ERROR_DIRECTION</string>
    <string name="pref_zone_difference">com.checkmyrest.nauticalcelestial.PREFERENCES.ZONE_DIFFERENCE</string>

    <string-array name="lon_array">
        <item>E</item>
        <item>W</item>
    </string-array>

    <string-array name="lat_array">
        <item>N</item>
        <item>S</item>
    </string-array>

    <string-array name="plus_minus">
        <item>+</item>
        <item>-</item>
    </string-array>

    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="year_array">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="stars">
        <item>Acamar</item>
        <item>Achernar</item>
        <item>Acrux</item>
        <item>Adhara</item>
        <item>Aldebaran</item>
        <item>Alioth</item>
        <item>Alkaid</item>
        <item>Al Nair</item>
        <item>Alnilam</item>
        <item>Alphard</item>
        <item>Alphecca</item>
        <item>Alpheratz</item>
        <item>Altair</item>
        <item>Ankaa</item>
        <item>Antares</item>
        <item>Arcturus</item>
        <item>Atria</item>
        <item>Avior</item>
        <item>Bellatrix</item>
        <item>Betelgeuse</item>
        <item>Canopus</item>
        <item>Capella</item>
        <item>Deneb</item>
        <item>Denebola</item>
        <item>Diphda</item>
        <item>Dubhe</item>
        <item>Elnath</item>
        <item>Eltanin</item>
        <item>Enif</item>
        <item>Formalhaut</item>
        <item>Gacrux</item>
        <item>Gienah</item>
        <item>Hadar</item>
        <item>Hamal</item>
        <item>Kaus Austr.</item>
        <item>Kochab</item>
        <item>Markab</item>
        <item>Menkar</item>
        <item>Menkent</item>
        <item>Miaplacidus</item>
        <item>Mirfak</item>
        <item>Nunki</item>
        <item>Peacock</item>
        <item>Pollux</item>
        <item>Procyon</item>
        <item>Rasalhague</item>
        <item>Regulus</item>
        <item>Rigel</item>
        <item>Rigil Kent</item>
        <item>Sabik</item>
        <item>Schedar</item>
        <item>Shaula</item>
        <item>Sirius</item>
        <item>Spica</item>
        <item>Suhail</item>
        <item>Vega</item>
        <item>Zuben-ubi</item>
    </string-array>
    <string-array name="on_off">
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string-array name="fast_slow">
        <item>Fast</item>
        <item>Slow</item>
    </string-array>
    <string-array name="true_relative">
        <item>True</item>
        <item>Relative</item>
    </string-array>
    <string name="degree_sign">°</string>
    <string name="minute_sign">\'</string>
    <string name="Lon">Lon</string>
    <string name="Lat">Lat</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="colon_sign">:</string>
    <string name="zd">ZD</string>
    <string name="gha_body">GHA ϒ</string>
    <string name="dec_body">Dec x</string>
    <string name="inc">INC ϒ</string>
    <string name="cd">C-d</string>
    <string name="cv">C-v</string>
    <string name="calc_azimuth">Calculate Azimuth</string>
    <string name="sa">Sext</string>
    <string name="ie">IE</string>
    <string name="dip">Dip</string>
    <string name="adj">TC</string>
    <string name="calc_intercept">Calculate Intercept</string>
    <string name="Position">Pos\'n</string>
    <string name="ChronError">Chron Err</string>
    <string name="instructions">Press for altitude, long press for compass check</string>
    <string name="sha">SHA x</string>
    <string name="calc_comp_err">Calculate Compass Error</string>
    <string name="knots">Kn</string>
    <string name="showBearingType">Show</string>
    <string name="brg">bearings</string>

</resources>
