<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Date"/>

                <EditText
                    android:id="@+id/txtDateDay"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:hint="Day"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="01"
                    android:gravity="center" />

                <Spinner
                    android:id="@+id/cmbDateMonth"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:entries="@array/month_array"/>

                <Spinner
                    android:id="@+id/cmbDateYear"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:entries="@array/year_array"/>

                <Button
                    android:id="@+id/btnTimeNow"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="Now"
                    android:onClick="SetTimeNow"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30sp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Time"/>

                <EditText
                    android:id="@+id/txtTimeHour"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="Hour"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="02"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon_sign"/>

                <EditText
                    android:id="@+id/txtTimeMins"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="Mins"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="02"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon_sign"/>

                <EditText
                    android:id="@+id/txtTimeSecs"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="Secs"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="02"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/zd"/>

                <Spinner
                    android:id="@+id/cmbZdPlusminus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:entries="@array/plus_minus"/>

                <EditText
                    android:id="@+id/txtTimeZd"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="H"
                    android:text="0"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:gravity="center"/>

            </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ChronError"/>

        <EditText
            android:id="@+id/txtCeHour"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="hh"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="00"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon_sign"/>

        <EditText
            android:id="@+id/txtCeMins"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="mm"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="00"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon_sign"/>

        <EditText
            android:id="@+id/txtCeSecs"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="ss"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="00"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/cmbCeFastSlow"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:entries="@array/fast_slow"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FFFFFF"
        android:paddingTop="5dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/Lat"/>

        <EditText
            android:id="@+id/txtDrLatDeg"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="Deg"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_sign"/>

        <EditText
            android:id="@+id/txtDrLatMin"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="Min"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute_sign"/>

        <Spinner
            android:id="@+id/cmbDrLatNs"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:entries="@array/lat_array"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/Lon"/>

        <EditText
            android:id="@+id/txtDrLonDeg"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="Deg"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_sign"/>

        <EditText
            android:id="@+id/txtDrLonMin"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="Min"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute_sign"/>

        <Spinner
            android:id="@+id/cmbDrLonEw"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:entries="@array/lon_array"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF"
            android:paddingTop="5dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="100dp"
            android:paddingLeft="100dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Ship Hdg"
                android:gravity="center"/>

            <EditText
                android:id="@+id/txtDrHdg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:hint="000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_sign"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="100dp"
            android:paddingLeft="100dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Ship Speed"
                android:gravity="center"/>

            <EditText
                android:id="@+id/txtDrSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:hint="00.0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knots"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="80dp"
            android:paddingLeft="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showBearingType"/>

            <Spinner
                android:id="@+id/cmbBearingTypeToShow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:entries="@array/true_relative"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brg"/>

        </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#FFFFFF"
                android:paddingTop="5dp"/>

            <Button
                android:id="@+id/btnMakeStarfinder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Make Starfinder"
                android:onClick="clkMakeStarfinder"/>

</LinearLayout>
